--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ display-interface-parallel-gpio = "0.7.0"
 tinygif = "0.0.4"
 static_cell = { version="2.1.0", features = ["nightly"] }
 reqwless = { version = "0.12.1", features = ["alloc"] }
+lvgl = "0.6.2"
 
 [profile.dev]
 # Rust debug is too slow.
